server create new user

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Ym9zcy1vcG9zc3VtLTIxLmNsZXJrLmFjY291bn
 CLERK_SECRET_KEY=sk_test_PtpxmumNz8VTSn16ZgqOvWNF4MulqGeFkdsGEvpzdC
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+
+WEBHOOK_SECRET=whsec_anHSN0woH4fquA2HCkPbNtzfMPDrqgKK
